# PCCM

./: .gitignore  Makefile  README.md  pyproject.toml
PCCM/: 01_single_long_short_pair.py  02_n_shorts_agains_one_long.py  03_script_02_with_random_walk_prices.py  BlackScholesMerton.py  OptimGenericPCCM.py  OptionModels.py  PriceModels.py  Strategies.py  utils.py
ml/: cons.py  get_data.py  models.py  predict.py  tickers.txt  train.py
notebooks/: generic_pmcc.py
wheel/: quality.py
