[project]
name = "pccm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "joblib>=1.4.2",
    "marimo>=0.10.1",
    "numpy>=2.1.3",
    "optuna>=4.1.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pudb>=2024.1.3",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "yfinance>=0.2.50",
]
